# PrismLauncher

./: Dockerfile.core  README-Tauri.md  README-Windows.md  README.md  build.bat  build.ps1  build.sh  docker-compose.yml  nginx.conf  run-dev.bat  run-electron.bat  setup-windows.bat
core/: BaseInstance.cpp  BaseInstance.h  CMakeLists.txt
core/ipc/: IPCClient.cpp  IPCClient.h  IPCInterface.h  IPCManager.cpp  IPCManager.h  IPCService.cpp  IPCService.h
frontend/: Dockerfile.dev  index.html  package-windows.json  package.json  tsconfig.json  vite.config.ts  vite.config.windows.ts
frontend/electron/: main.ts  main.windows.ts  preload.ts  preload.windows.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Instance/: InstanceCard.tsx  InstanceList.tsx
frontend/src/components/Layout/: Header.tsx  MainLayout.tsx  Navigation.tsx  Sidebar.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: IPCService.ts  TauriService.ts
frontend/src/stores/: appStore.ts  instanceStore.ts
frontend/src/types/: index.ts
ipc_compat/: BUILD.md  CLEANUP.md  CMakeLists.txt  README.md  SUMMARY.md  main.cpp
ipc_compat/compat/: Network.h  Process.cpp  Process.h  String.cpp  String.h
ipc_compat/core/: Application.cpp  Application.h
ipc_compat/examples/: client_example.cpp
ipc_compat/ipc/: Client.cpp  Client.h  Message.cpp  Message.h  MessageBus.cpp  MessageBus.h
ipc_compat/launcher/: LauncherCore.cpp  LauncherCore.h
ipc_compat/tests/: test_message.cpp  test_string.cpp
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: account.rs  instance.rs  ipc.rs  java.rs  main.rs  mod_platform.rs  settings.rs  system.rs
winui3-launcher/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USAGE.md  build.bat  package.json
winui3-launcher/src/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  main.cpp  pch.h
winui3-launcher/src/Converters/: BooleanToVisibilityConverter.cpp  BooleanToVisibilityConverter.h  NullToVisibilityConverter.cpp  NullToVisibilityConverter.h
winui3-launcher/src/Dialogs/: CreateInstanceDialog.idl  CreateInstanceDialog.xaml  CreateInstanceDialog.xaml.cpp  CreateInstanceDialog.xaml.h
winui3-launcher/src/Models/: InstanceModel.cpp  InstanceModel.h
winui3-launcher/src/bridge/: InstanceListWrapper.cpp  InstanceListWrapper.h  InstanceWrapper.cpp  InstanceWrapper.h  PrismLauncherBridge.cpp  PrismLauncherBridge.h
winui3-launcher/src/core/: PrismCore.cpp  PrismCore.h
